Fixed firefox monospace font hor. scroll bug
- Changed monospace font containers
- Updated npm start script to wattch files from docs dir

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
-    "start": "browser-sync start --server --directory --port 4005 --no-open --files src"
+    "start": "browser-sync start --server --directory --port 4005 --no-open --files docs"
   },
   "repository": {
     "type": "git",
